# core

./: .gitignore  .gitlab-ci.yml  README.md
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  window.cpp  window.h
src/cmake/Modules/: FindGL.cmake  FindSDL2.cmake  SDL2Targets-noconfig.cmake  SDL2Targets.cmake
src/common/: CMakeLists.txt
src/common/gameobjects/: blackhole.h  comet.h  meteor.h  moon.h  objects.h  star.h  starsystem.h
src/common/utils/: uuid.cpp  uuid.h
src/lib/common/gameobjects/: blackhole.h  comet.h  galaxy.h  meteor.h  moon.h  objects.h  planet.h  star.h  starsystem.h
src/lib/universegenerator/: CMakeLists.txt  universegenerator.cpp  universegenerator.h
src/universegenerator/: CMakeLists.txt  universegenerator.cpp  universegenerator.h
